# core

./: .gitignore  Dockerfile  Dockerfile.xmd  LICENSE  TODO.md  adapters.js  default.nix  docker-compose.yml  entrypoint.sh  ffi-syntax.md  index.js  notes.md  package-lock.json  package.json  polykode.cabal
.golden/CodeBlocks.evaluateBlocks.run/: actual  golden
.golden/Parser.parseMarkdown.simple/: actual
.golden/Parser.parseMarkdown.with-hints/: golden
core/.golden/Parser.parseMarkdown.simple/: golden
core/.golden/Parser.parseMarkdown.with-hints/: golden
core/examples/: context.md  serial.md  simple.md
core/scripts/: rpc.js  test-call.js
core/src/: CodeBlocks.hs  CodeExecutor.hs  Config.hs
core/src/CodeExecutor/: Utils.hs
core/src/CodeExecutor/Langs/Bash/: Run.hs  Templates.hs
core/src/Container/: Algebra.hs  Pool.hs  SocketDaemon.hs
core/src/Server/: Actions.hs  Types.hs
core/tests/: ContainerTest.hs  ParserTest.hs  _main.hs
core/tests/TestUtils/: Utils.hs
examples/: serial.md  simple.md
lxc/: build.sh  config  env.nix  interfaces  lxc-usernet  net-config  netplan.yaml  subuserallocation
lxd/: container.lxd  core.lxd  xmd.lxd
scripts/: run-lxd.sh
shells/: build.nix  container.nix  dev.nix
src/: CodeBlocks.hs  CodeExecutor.hs  Config.hs  Container.hs  Evaluator.hs  Main.hs  MdEval.hs  Parser.hs  Utils.hs
src/CodeExecutor/: Utils.hs
src/CodeExecutor/Langs/: Bash.hs  NodeJs.hs
src/CodeExecutor/Langs/Bash/: Run.hs  Templates.hs
src/CodeExecutor/Langs/NodeJs/: Run.hs  Templates.hs
src/Container/: Algebra.hs  Eff.hs  Pool.hs  SocketDaemon.hs
src/Server/: Actions.hs  Context.hs  JsonResponse.hs  Routes.hs  Utils.hs
src/Server/Routes/: Md.hs  Uffi.hs
tests/: CodeBlocksTest.hs  ContainerTest.hs  EffectMock.hs  MdEvalTest.hs  ParserTest.hs  _main.hs
tests/TestUtils/: EffectMock.hs
