cabal-version:       2.2

name:                polykode
version:             0.1.0.0
license: MIT
license-file:        LICENSE
author:              Akshay Nair
maintainer:          phenax5@gmail.com
build-type:          Simple

common lib
  hs-source-dirs: src
  build-depends:
    cmark,
    raw-strings-qq,
    transformers,
    text,
    unix,
    process,
    strict,
    fused-effects,
    base
  default-language:    Haskell2010

Test-Suite test
  import: lib
  type:       exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:    _main.hs
  default: false
  build-depends:
    hspec

library library
  import: lib
  exposed-modules:
    Utils

executable polykode
  import: lib
  main-is: Main.hs
